--- a/package.json
+++ b/package.json
@@ -21,36 +21,39 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.2",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.25.0",
+    "@eslint/js": "^9.25.1",
     "@microsoft/tsdoc-config": "^0.17.1",
     "@types/node": "^22.14.1",
     "@vitest/coverage-v8": "3.0.9",
     "dependency-cruiser": "^16.10.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
-    "eslint-import-resolver-typescript": "^4.3.3",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-tsdoc": "^0.4.0",
     "jiti": "^2.4.2",
     "memfs": "^4.17.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vitest": "^3.1.1"
+    "typescript-eslint": "^8.31.0",
+    "vitest": "^3.1.2"
   },
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
   "scripts": {
     "test": "vitest --run",
-    "gen:depsReport": "npx depcruise packages/**/src/* --config ./.dep-cruiser.cjs --output-type dot | dot -T svg > ./docs/architecture/dependency-graph.svg",
+    "gen:depsReport": "npx depcruise packages/**/src/* --config ./.dep-cruiser.cjs --output-type json > ./docs/architecture/dependency-errors.json",
+    "gen:depsGraph": "npx depcruise packages/**/src/* --config ./.dep-cruiser.cjs --output-type dot | dot -T svg > ./docs/architecture/dependency-graph.svg",
+    "cruise": "pnpm run gen:depsReport && pnpm run gen:depsGraph",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
     "typecheck": "tsc -b --noEmit",
     "clean": "tsc --build --clean && rm -rf .dev/.cache",
-    "build": "tsc -b && pnpm run gen:depsReport",
-    "build:clean": "pnpm run clean && tsc -b",
     "version": "changeset version",
     "release": "changeset publish",
     "commit": "git add . && git commit",
-    "prepare:release": "pnpm run format && pnpm run lint && pnpm changeset && pnpm run version && pnpm run commit && git push origin main"
+    "build:clean": "pnpm run clean && tsc -b",
+    "build:css-normalize": "pnpm --filter @toolbox-ts/css-normalize run build",
+    "build": "tsc -b && pnpm run build:css-normalize && pnpm run cruise",
+    "prepare:release": "pnpm run format && pnpm run lint && pnpm run test && pnpm changeset && pnpm run version && pnpm run commit && git push origin main"
   }
 }
