--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "build:clean": "pnpm run clean && tsc -b",
     "build:css-normalize": "pnpm --filter @toolbox-ts/css-normalize run build",
     "build": "tsc -b && pnpm run build:css-normalize && pnpm run cruise",
-    "prepare:release": "pnpm run format && pnpm run lint && pnpm run test && pnpm changeset && pnpm run version && pnpm run commit && git push origin main"
+    "prepare:release": "pnpm run format && pnpm run lint && pnpm run test && pnpm changeset"
   }
 }
