--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,10 +7,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Gajdascz/toolbox-ts/tree/main/packages/utils"
-  },
   "author": {
     "name": "Nolan Gajdascz",
     "email": "dev.gajdascz@gmail.com",
@@ -20,6 +16,11 @@
     "typescript",
     "utilities"
   ],
+  "homepage": "https://github.com/toolbox-ts/toolbox-ts/tree/main/packages/utils",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/toolbox-ts/toolbox-ts.git"
+  },
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "exports": {
