--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths-ignore:
-      - "**/*.md"
+      - '**/*.md'
   pull_request:
     types:
       - closed
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: 📥 Install pnpm
         run: npm install -g pnpm@10.9.0
@@ -50,8 +50,6 @@ jobs:
 
       - name: 📝 Create Version PR (Changesets)
         uses: changesets/action@v1
-        with:
-          version: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -70,7 +68,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: 📥 Install pnpm
         run: npm install -g pnpm@10.9.0
@@ -85,7 +83,8 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: 🚀 Publish to GitHub Packages
-        run: pnpm -r publish --access public --no-git-checks
+        run:
+          pnpm -r publish --access public --no-git-checks
           --registry=https://npm.pkg.github.com --filter ./packages/*
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
