fix: add registries to npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 node-linker=hoisted
 auto-install-peers=false
+
+registry=https://registry.npmjs.org/
+@toolbox-ts:registry=https://npm.pkg.github.com/
