--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -42,6 +42,6 @@
   "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
   "scripts": {
     "build:string": "node ./bin/generate-from-css.js",
-    "build": "pnpm run build:string && mkdir -p build && cp -R ./src ./build"
+    "build": "pnpm run build:string && mkdir -p build && cp -R ./src/. ./build"
   }
 }
