--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -37,10 +37,7 @@
     "LICENSE",
     "README.md"
   ],
-  "scripts": {
-    "test": "vitest --run",
-    "build": "tsc -b"
-  },
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
   "dependencies": {
     "jiti": "^2.4.2"
   },
@@ -48,5 +45,8 @@
     "vitest": "^3.1.1",
     "@vitest/coverage-v8": "3.0.9"
   },
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
+  "scripts": {
+    "test": "vitest --run",
+    "build": "tsc -b"
+  }
 }
