--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -23,10 +23,12 @@
     "url": "https://github.com/toolbox-ts/toolbox-ts.git"
   },
   "type": "module",
+  "types": "./index.d.ts",
   "files": [
     "build",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "index.d.ts"
   ],
   "exports": {
     "./string": "./build/string.js",
