--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -62,6 +62,10 @@
   "dependencies": {
     "@toolbox-ts/css-types": "workspace:*"
   },
+  "devDependencies": {
+    "vitest": "^3.1.1",
+    "@vitest/coverage-v8": "3.0.9"
+  },
   "scripts": {
     "build": "tsc -b && tsx ./bin/build.ts"
   }
