--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -23,25 +23,50 @@
     "url": "https://github.com/toolbox-ts/toolbox-ts.git"
   },
   "type": "module",
-  "types": "./build/index.d.ts",
+  "types": "./build/types/index.d.ts",
   "files": [
     "build",
     "LICENSE",
     "README.md"
   ],
   "exports": {
-    "./string": "./build/string.js",
-    "./css": "./build/normalize.css",
-    "./scss": "./build/normalize.scss",
-    "./pcss": "./build/normalize.pcss",
-    "./less": "./build/normalize.less",
-    "./styl": "./build/normalize.styl",
+    "./string": {
+      "default": "./build/static/string.js",
+      "types": "./build/types/static/string.d.ts"
+    },
+    "./css": {
+      "default": "./build/static/normalize.css",
+      "types": "./build/types/static/normalize.css.d.ts"
+    },
+    "./scss": {
+      "default": "./build/static/normalize.scss",
+      "types": "./build/types/static/normalize.scss.d.ts"
+    },
+    "./pcss": {
+      "default": "./build/static/normalize.pcss",
+      "types": "./build/types/static/normalize.pcss.d.ts"
+    },
+    "./less": {
+      "default": "./build/static/normalize.less",
+      "types": "./build/types/static/normalize.less.d.ts"
+    },
+    "./styl": {
+      "default": "./build/static/normalize.styl",
+      "types": "./build/types/static/normalize.styl.d.ts"
+    },
     ".": {
-      "import": "./build/normalize.css"
+      "import": "./build/index.js",
+      "types": "./build/types/index.d.ts"
     }
   },
-  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
+  "dependencies": {
+    "@toolbox-ts/css-types": "workspace:*"
+  },
+  "devDependencies": {
+    "vitest": "^3.1.1",
+    "@vitest/coverage-v8": "3.0.9"
+  },
   "scripts": {
-    "build": "node ./bin/build.js"
+    "build": "tsc -b && tsx ./bin/build.ts"
   }
 }
