--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -67,6 +67,6 @@
     "@vitest/coverage-v8": "3.0.9"
   },
   "scripts": {
-    "build": "tsc -b && tsx ./bin/build.ts"
+    "build": "tsc -b && npx tsx ./bin/build.ts"
   }
 }
