--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths-ignore:
-      - "**/*.md"
+      - '**/*.md'
   pull_request:
     types:
       - closed
@@ -35,13 +35,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: 📥 Install pnpm
         run: npm install -g pnpm@10.10.0
-
-      - name: 📥 Install tsx
-        run: pnpm add -g tsx
 
       - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
@@ -72,13 +69,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: 📥 Install pnpm
         run: npm install -g pnpm@10.10.0
-
-      - name: 📥 Install tsx
-        run: pnpm add -g tsx
 
       - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
