--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "./packages/text" },
     { "path": "./packages/file" },
     { "path": "./packages/dsa" },
-    { "path": "./packages/schema" }
+    { "path": "./packages/schema" },
+    { "path": "./packages/colors" }
   ]
 }
