--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -49,5 +49,9 @@
   },
   "dependencies": {
     "@toolbox-ts/utils": "workspace:*"
+  },
+  "devDependencies": {
+    "vitest": "^3.1.1",
+    "@vitest/coverage-v8": "3.0.9"
   }
 }
