chore(repo): re-add coverage to gitignore, generate depsgraph, and fix cruise script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 **/node_modules
 **/build
 **/dist
+**/coverage
+**/.coverage
 **/.cache
 **/*.tsbuildinfo
 **/package-lock.json
@@ -8,4 +10,3 @@
 *.log
 .env
 .env.*
-**/.coverage
