--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,8 @@ jobs:
     name: Pre-Release
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-
+    outputs:
+      has_changeset: ${{ steps.check_changeset.outputs.has_changeset }}
     steps:
       - name: ⬇️ Checking Out Repo
         uses: actions/checkout@v4
@@ -63,12 +64,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: 🧐 Checking for Changeset Files
+        id: check_changeset
+        run: |
+          if [ -n "$(ls .changeset/*.md 2>/dev/null)" ]; then
+            echo "Changeset file found"
+            echo "has_changeset=true" >> $GITHUB_OUTPUT
+          else
+            echo "No changeset file found"
+            echo "has_changeset=false" >> $GITHUB_OUTPUT
+          fi
+
   publish:
     name: Publish
     if:
-      github.event_name == 'pull_request' && github.event.pull_request.merged ==
-      true
+      ${{ needs.prerelease.outputs.has_changeset == 'true' && github.event_name
+      == 'pull_request' && github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
+    needs: prerelease
 
     steps:
       - name: ⬇️ Checking Out Repo
