--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,7 +68,8 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    needs: prerelease
+    if: github.event.pull_request.merged == true &&
+      github.event.pull_request.title == 'Version Packages'
 
     steps:
       - name: ⬇️ Checking Out Repo
