--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,7 +69,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true &&
-      github.event.pull_request.title == 'Version Packages'
+      contains(github.event.pull_request.title, 'Version Packages')
 
     steps:
       - name: ⬇️ Checking Out Repo
