--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
   },
   "lint-staged": {
     "*": [
-      "eslint . --fix",
-      "prettier . --write"
+      "pnpm clean:code"
     ]
   },
   "scripts": {
