--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,6 +61,16 @@ jobs:
       - name: 🧪 Running Tests
         run: pnpm test
 
+      - name: 📊 Generate Dependency Graph
+        run: pnpm cruise:generate
+
+      - name: 📤 Upload dependency graph
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-graph
+          path: docs/dependencies/graph.svg
+          if-no-files-found: warn
+
       - name: 📝 Creating Version PR (Changesets)
         uses: changesets/action@v1
         env:
@@ -94,6 +104,16 @@ jobs:
 
       - name: 🔨 Building Packages
         run: pnpm -r build
+
+      - name: 📊 Generate Dependency Graph
+        run: pnpm cruise:generate
+
+      - name: 📤 Upload dependency graph
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-graph
+          path: docs/dependencies/graph.svg
+          if-no-files-found: warn
 
       - name: 🚀 Publishing to NPMJS
         run: pnpm changeset publish --registry=https://registry.npmjs.org
