--- a/packages/css-normalize/package.json
+++ b/packages/css-normalize/package.json
@@ -59,12 +59,9 @@
       "types": "./build/types/index.d.ts"
     }
   },
-  "dependencies": {
-    "@toolbox-ts/css-types": "workspace:*"
-  },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.1"
   },
   "scripts": {
     "build": "tsc -b && npx tsx ./bin/build.ts"
