--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "type": "module",
   "devDependencies": {
-    "@changesets/cli": "^2.29.2",
+    "@changesets/cli": "^2.29.3",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/cz-commitlint": "^19.8.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.26.0",
     "@microsoft/tsdoc-config": "^0.17.1",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.14",
     "@vitest/coverage-v8": "3.0.9",
     "@vitest/ui": "3.1.2",
     "commitizen": "^4.3.1",
@@ -39,12 +39,12 @@
     "husky": "^9.1.7",
     "inquirer": "^12.6.0",
     "jiti": "^2.4.2",
-    "lint-staged": "^15.5.1",
+    "lint-staged": "^15.5.2",
     "memfs": "^4.17.1",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.1",
-    "vitest": "^3.1.2"
+    "typescript-eslint": "^8.32.0",
+    "vitest": "^3.1.3"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "config": {
@@ -72,6 +72,7 @@
     "check": "pnpm typecheck && pnpm run cruise:validate && pnpm test",
     "cm": "npx tsx ./bin/commit.ts",
     "lint-staged": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "update:packages": "pnpm -r update"
   }
 }
