--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -51,7 +51,7 @@
     "@toolbox-ts/utils": "workspace:*"
   },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   }
 }
