--- a/packages/dsa/package.json
+++ b/packages/dsa/package.json
@@ -43,7 +43,7 @@
     "build": "tsc -b"
   },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   }
 }
