--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -41,8 +41,8 @@
     "jiti": "^2.4.2"
   },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   },
   "scripts": {
     "test": "vitest --run",
