--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -40,8 +40,8 @@
     "@toolbox-ts/utils": "workspace:*"
   },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   },
   "scripts": {
     "test": "vitest --run",
