--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -37,12 +37,12 @@
     }
   },
   "dependencies": {
-    "@toolbox-ts/utils": "workspace:*",
-    "@toolbox-ts/schema": "workspace:*"
+    "@toolbox-ts/schema": "workspace:*",
+    "@toolbox-ts/utils": "workspace:*"
   },
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   },
   "scripts": {
     "test": "vitest --run",
