--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -36,8 +36,8 @@
     "README.md"
   ],
   "devDependencies": {
-    "vitest": "^3.1.1",
-    "@vitest/coverage-v8": "3.0.9"
+    "@vitest/coverage-v8": "3.0.9",
+    "vitest": "^3.1.3"
   },
   "scripts": {
     "test": "vitest --run",
