--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^9.1.7",
     "inquirer": "^12.6.0",
     "jiti": "^2.4.2",
+    "lightningcss": "^1.29.3",
     "lint-staged": "^15.5.2",
     "memfs": "^4.17.1",
     "prettier": "^3.5.3",
