feat(dsa): package update and restructure
- Update repo dependencies & packages.
- Update CI to check for dev branch allowing
  a faster development workflow.

- Rework DSA package architecture.
  - Add core structure module.
  - Rework node management system.
  - Add Stack and Queue structures.
  - Rework LinkedList structures.
  - Update code docs and READMEs.

--- a/packages/dsa/package.json
+++ b/packages/dsa/package.json
@@ -16,7 +16,12 @@
     "data-structures",
     "algorithms",
     "linked-list",
-    "doubly-linked-list"
+    "doubly-linked-list",
+    "stack",
+    "queue",
+    "deque",
+    "circular-queue",
+    "circular-deque"
   ],
   "homepage": "https://github.com/toolbox-ts/toolbox-ts/tree/main/packages/dsa",
   "repository": {
@@ -44,6 +49,6 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "3.1.4",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.3"
   }
 }
