--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ permissions:
 jobs:
   prerelease:
     name: Pre-Release
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && !startsWith(github.ref,'refs/heads/dev/')
     runs-on: ubuntu-latest
 
     steps:
@@ -68,8 +68,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  publish:
-    name: Publish
+  release:
+    name: Release
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'pull_request' &&
